Fix route swagger
